fix: :bug: update pricing page styles and layout for better readability and adjust color themes in the application

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,11 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-serif);
 }
